[KAIZEN-0] automatisk code-cleanup fra intelliJ